fitur user auth login system

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4 
+GITHUB_CLIENT=Ov23liHO0xVod3LjCfkJ
+GITHUB_SECRET=e9a79eb4a7d443e30758763ca6d5b41fcf88f532
+NEXTAUTH_SECRET=admin123
