koneksi database MYSQL pake prisma ORM

--- a/.env
+++ b/.env
@@ -2,3 +2,13 @@ NEXT_PUBLIC_API_BASE_URL=https://api.jikan.moe/v4
 GITHUB_CLIENT=Ov23liHO0xVod3LjCfkJ
 GITHUB_SECRET=e9a79eb4a7d443e30758763ca6d5b41fcf88f532
 NEXTAUTH_SECRET=admin123
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="mysql://root:
+@localhost:3306/cuyanimelist"
