--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.5",
+    "@prisma/client": "^5.14.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "postcss": "^8",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1"
   }
 }
